# shutterbox

./: Dockerfile  README.md  main.py  play.py  pyproject.toml  shutter.py  sql.py  sql2.py
blebox/: cron.py  cron_1.py  cron_2.py  shutter.py
src/shutterbox/: app.py  gunicorn.conf.py  settings.py
tests/: test_shutterbox.py
