[tool.poetry]
name = "shutterbox"
version = "0.1.0"
description = ""
authors = ["Szymon Jasiński <szymon.jasinski@mirumee.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
black = "^22.6.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
